@@ -13,11 +13,11 @@
         </div>
         <asp:TextBox id="textSearch" runat="server" MaxLength="50" CssClass="textSearch" />
         <div class="wrapperDivisions">
-            <a id="linkDivisions" class="dnnSecondaryAction linkDivisions" onclick="$('#hiddenDivisions').toggle ()"><%= LocalizeString ("AllDivisions.Text") %></a>
+            <a id="linkDivisions" class="dnnSecondaryAction linkDivisions" onclick="$('.divisionDirectory #hiddenDivisions').toggle ()"><%= LocalizeString ("AllDivisions.Text") %></a>
             <div id="hiddenDivisions">
                 <dnn:DnnTreeView id="treeDivisions" runat="server" 
-                    OnClientLoad="ed_treeLoad"
-                    OnClientNodeClicked="ed_treeNodeClicked" 
+                    OnClientLoad="dd_treeLoad"
+                    OnClientNodeClicked="dd_treeNodeClicked" 
                     DataTextField="Title"
                     DataValueField="DivisionID"
                     DataFieldID = "DivisionID"
