@@ -4,16 +4,16 @@
 
 function ed_treeNodeClicked (sender, eventArgs) {
     var nodeText = eventArgs.get_node ().get_text ();
-    $("#linkDivisions").text (ed_shorten (35, nodeText));
-    $("#linkDivisions").attr ("title", nodeText);
-    $("#hiddenDivisions").hide ();
+    $(".employeeDirectory #linkDivisions").text (ed_shorten (35, nodeText));
+    $(".employeeDirectory #linkDivisions").attr ("title", nodeText);
+    $(".employeeDirectory #hiddenDivisions").hide ();
 }
 
 function ed_treeLoad (sender, eventArgs) {
     var nodes = sender.get_selectedNodes ();
     if (nodes.length > 0) {
         var nodeText = nodes [0].get_text ();
-         $("#linkDivisions").text (ed_shorten (35, nodeText));
-         $("#linkDivisions").attr ("title", nodeText);
+         $(".employeeDirectory #linkDivisions").text (ed_shorten (35, nodeText));
+         $(".employeeDirectory #linkDivisions").attr ("title", nodeText);
     }
 }
