@@ -1,6 +1,8 @@
 ﻿<h3>Version 1.1.6</h3>
 <ul>
     <li>New DivisionDirectory module.</li>
+    <li>EmployeeDirectory, DivisionDirectory: Added edit links to the grid.</li>
+    <li>Make sure that shared employee / division controls have same key names in different modules.</li>
     <li>Other small improvements and fixes.</li>
 </ul>
 <p>Known issue: DivisionDirectory and EmployeeDirectory modules should not be placed on the same page.</p>
